<resources>
    <string name="app_name" translatable="false">Countries</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet…</string>
    <string name="app_info">Made for a subject "Application development for mobile devices". Countries and their informations are supplied by REST Countries API and are stored locally using SQLite.</string>
    <string name="about">About</string>
    <string name="countries">Countries</string>
    <string name="exit">Exit</string>
    <string name="really_exit_the_application">Really exit the application?</string>
    <string name="cancel">Cancel</string>
    <string name="name">Official name</string>
    <string name="country">Country</string>
    <string name="three_letter_country_code">Three-letter country code</string>
    <string name="native_official_name_s">Native official name(s)</string>
    <string name="coat_of_arms">Coat of arms</string>
    <string name="capital_city_or_cities">Capital city (or cities)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="area">Area</string>
    <string name="population">Population</string>
    <string name="filter_countries_by_name">Filter countries by name…</string>
    <string name="currency">Currency</string>
    <string name="languages">Languages</string>
    <string name="sample_text" translatable="false">Sample text</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="loading_countries">Loading countries</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="settings">Settings</string>
    <string name="en" translatable="false">EN</string>
    <string name="hr" translatable="false">HR</string>
    <string name="language_jezik">Language/Jezik</string>
    <string name="channel_name" translatable="false">Countries</string>
    <string name="channel_description" translatable="false">Notification channel for Countries app</string>
    <string name="content_title">Countries</string>
    <string name="tap_text">Tap here to return to the application</string>
</resources>